hack/legacy/test/cases/02-ingress-apiversions/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-networkingv1beta1
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: echo
          servicePort: 8080
        path: /bar
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-networkingv1
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: echo
            port:
              number: 8080
        path: /baz
        pathType: Prefix
